--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,8 +1,8 @@
 name: Pylint
 
 on:
-    push:
-    pull_request:
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -11,20 +11,20 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pylint
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pylint
 
-    - name: Analysing the code with pylint
-      run: |
-        pylint --fail-under=8.0 $(git ls-files '*.py')
+      - name: Analyzing the code with pylint
+        run: |
+          pylint --fail-under=8.0 $(git ls-files '*.py')
